<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".organizer.CreateEventFragment">

    <!-- Outer ConstraintLayout to wrap all elements as one child of ScrollView -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Toolbar for back button and title -->

        <!-- Event Creation Form -->

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="-16dp">

            <ImageButton
                android:id="@+id/back_button_create_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="Back"
                app:srcCompat="@drawable/arrow_back_24px" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Create Event"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:layout_editor_absoluteX="0dp">

            <!-- Event Name -->
            <EditText
                android:id="@+id/editTextEventName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Event Name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Event Description -->
            <EditText
                android:id="@+id/editTextEventDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Event Description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextEventName" />

            <!-- Registration Start Date and Time -->
            <Button
                android:id="@+id/buttonRegStartDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Select Registration Start Date"
                app:layout_constraintEnd_toStartOf="@id/buttonRegStartTime"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHeight_default="wrap"
                app:layout_constraintTop_toBottomOf="@id/editTextEventDescription" />

            <Button
                android:id="@+id/buttonRegStartTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="Select Time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_default="wrap"
                app:layout_constraintStart_toEndOf="@id/buttonRegStartDate"
                app:layout_constraintTop_toBottomOf="@id/editTextEventDescription" />

            <!-- Registration End Date and Time -->
            <Button
                android:id="@+id/buttonRegEndDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Select Registration End Date"
                app:layout_constraintEnd_toStartOf="@id/buttonRegEndTime"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHeight_default="wrap"
                app:layout_constraintTop_toBottomOf="@id/buttonRegStartDate" />

            <Button
                android:id="@+id/buttonRegEndTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Select Time"
                app:layout_constraintHeight_default="wrap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/buttonRegEndDate"
                app:layout_constraintTop_toBottomOf="@id/buttonRegStartTime" />

            <!-- Event Start Date and Time -->
            <Button
                android:id="@+id/buttonEventStartDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Select Event Start Date"
                app:layout_constraintEnd_toStartOf="@id/buttonEventStartTime"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonRegEndDate" />

            <Button
                android:id="@+id/buttonEventStartTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="Select Time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/buttonEventStartDate"
                app:layout_constraintTop_toBottomOf="@id/buttonRegEndTime" />

            <!-- Event End Date and Time -->
            <Button
                android:id="@+id/buttonEventEndDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Select Event End Date"
                app:layout_constraintEnd_toStartOf="@id/buttonEventEndTime"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonEventStartDate" />

            <Button
                android:id="@+id/buttonEventEndTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Select Time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/buttonEventEndDate"
                app:layout_constraintTop_toBottomOf="@id/buttonEventStartTime" />

            <!-- Number of Participants -->
            <EditText
                android:id="@+id/editTextMaxNumParticipants"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Max Number of Participants in Waiting List"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonEventEndDate" />

            <!-- Geolocation Required -->
            <CheckBox
                android:id="@+id/checkBoxGeolocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Geolocation Required"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextMaxNumParticipants" />
            <!-- Upload Image Button -->
            <Button
                android:id="@+id/buttonUploadImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Upload Image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkBoxGeolocation" />
            <!-- Create Event Button -->
            <Button
                android:id="@+id/buttonCreateEvent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="Create Event"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkBoxGeolocation" />

            <Space
                android:id="@+id/bottom_spacer"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonCreateEvent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>