<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_events_organizer"
        android:icon="@drawable/event_24px"
        android:title="My Events" />
    <item
        android:id="@+id/nav_profile_organizer"
        android:icon="@drawable/account_circle_24px"
        android:title="Profile" />
</menu>
