<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- RecyclerView to display events -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_events"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_spacer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

<!--   TODO: POSITION FLOATING ACTION BUTTON BETTER-->
    <!-- Floating Action Button for Adding an Event, positioned at the bottom right -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="Add Event"
        android:src="@drawable/add_24px"
        app:layout_constraintBottom_toTopOf="@id/bottom_spacer"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Spacer to provide space above FAB and bottom navigation -->
    <Space
        android:id="@+id/bottom_spacer"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
