<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home_24px"
        android:title="Home" />
    <item
        android:id="@+id/nav_scan"
        android:icon="@drawable/qr_code_scanner_24px"
        android:title="Scan Activity" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/account_circle_24px"
        android:title="Profile" />
</menu>
