...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Existing Buttons -->
        <Button
            android:id="@+id/name_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="Edit Name" />

        <Button
            android:id="@+id/email_button"
...
